[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/animated_player.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/StaplerProgressBar.gd" type="Script" id=4]
[ext_resource path="res://Assets/Jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Did_task.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Hurt.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 13 )

[sub_resource type="Animation" id=3]
resource_name = "happy_player_idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=4]
resource_name = "happy_player_idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 12, 11, 10, 9, 8, 15, 14 ]
}

[sub_resource type="Animation" id=6]
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 1, 0.290196, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Player" type="KinematicBody2D"]
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, -8 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
vframes = 3
hframes = 16
frame = 14

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="idle_energy_increaser" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="TV_happiness_increaser" type="Timer" parent="."]
wait_time = 0.1

[node name="Coffee_energy_increaser" type="Timer" parent="."]
wait_time = 0.1

[node name="player_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
position = Vector2( 4, -4 )
shape = SubResource( 2 )

[node name="UI" parent="." instance=ExtResource( 3 )]
position = Vector2( -249.497, -127.763 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.3
anims/happy_player_idle_left = SubResource( 3 )
anims/happy_player_idle_right = SubResource( 4 )
anims/happy_player_walk_left = SubResource( 5 )
anims/happy_player_walk_right = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="PhoneTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="StaplerProgress" type="ProgressBar" parent="."]
visible = false
margin_left = -18.1024
margin_top = -35.843
margin_right = 15.8976
margin_bottom = -30.843
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 50.0
step = 1.0
percent_visible = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StaplerProgress"]
margin_left = 9.0
margin_top = -8.0
margin_right = 51.0
margin_bottom = 8.0
rect_scale = Vector2( 0.4, 0.4 )
size_flags_horizontal = 5
size_flags_vertical = 12
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0/50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="task" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="idle_energy_increaser" to="." method="_on_idle_energy_increaser_timeout"]
[connection signal="timeout" from="TV_happiness_increaser" to="." method="_on_TV_happiness_increaser_timeout"]
[connection signal="timeout" from="Coffee_energy_increaser" to="." method="_on_Coffee_energy_increaser_timeout"]
[connection signal="area_entered" from="player_area" to="." method="_on_player_area_area_entered"]
[connection signal="area_exited" from="player_area" to="." method="_on_player_area_area_exited"]
[connection signal="body_entered" from="player_area" to="." method="_on_player_area_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="PhoneTimer" to="." method="_on_PhoneTimer_timeout"]
